--- a/deno.json
+++ b/deno.json
@@ -1,4 +1,8 @@
 {
+  "exclude": [
+    "_fresh/",
+    "**/_fresh/*"
+  ],
   "lock": false,
   "tasks": {
     "build": "deno run -A --env dev.ts build",
